--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,9 @@ spring.datasource.hikari.password=1234
 
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.config-location=classpath:/mybatis-config.xml
+mybatis.type-aliases-package=com.example.ex01.dto
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.jdbc-type-for-null=null
 
 #logging.level.jdbc=off
 #logging.level.jdbc.sqlonly=off
