--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.port=8081
 #spring.datasource.password=1234
 
 spring.datasource.hikari.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@58.236.44.179:1521:xe
-#spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@58.236.44.179:1521:xe
+spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@localhost:1521:xe
 #spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.hikari.username=ex01
