--- a/vue/package.json
+++ b/vue/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "dayjs": "^1.11.13",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.3.0",
     "vue": "^3.5.13",
